# word-bearer

./: .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml
src/: bot.py  client.py
src/components/: matchreport.py  messagejob.py
src/ladder/: ladder.py  manager.py
